--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokédex</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="../styles/styles.css">
         <link rel="stylesheet" href="../styles/pokedex.css">
     </head>
@@ -27,7 +28,43 @@
                 </nav>
             </div>
         </header>
-        <div id="pokemonList" class="pokemon-list"></div>
+        <div class="container">
+            <aside class="battle-panel">
+                <div class="user-info">
+                    <img src="img/profile-default.png" alt="User Avatar" class="user-avatar" />
+                    <h2 class="user-name">Ash Ketchum</h2>
+                    <p class="user-stats">Victories: <span id="victories">0</span> | Defeats: <span id="defeats">0</span></p>
+                    <button class="edit-button" onclick="openEditPopup()">Edit Profile</button>
+                </div>
+                <h2>Your Battle Team</h2>
+                <ul id="battleTeam"></ul>
+            </aside>
+            
+            <!-- Popup Modal -->
+            <div id="editPopup" class="popup">
+                <div class="popup-content">
+                    <div class="popup-header">
+                        <span class="close-button" onclick="closeEditPopup()">&times;</span>
+                        <h2>Edit Profile</h2>
+                    </div>
+                    <form id="editForm">
+                        <div class="preview-container">
+                            <img id="previewAvatar" src="img/profile-default.png" alt="Preview Avatar" class="preview-avatar" onclick="triggerFileInput()" />
+                        </div>
+                        <input type="file" id="userAvatar" accept="image/*" onchange="previewImage()" hidden />
+
+                        <label for="userName">Name:</label>
+                        <input type="text" id="userName" value="Ash Ketchum" />
+
+                        <button type="button" onclick="saveUserInfo()" class="save-button">Save Changes</button>
+                    </form>
+                </div>
+            </div>
+            <main>
+                <div id="pokemonList" class="pokemon-list"></div>
+            </main>
+        </div>
         <script src="../scripts/pokedex.js"></script>
     </body>
+    
 </html>
