Capture mini game and pokedex ui

--- a/pages/my-pokemon.html
+++ b/pages/my-pokemon.html
@@ -28,5 +28,21 @@
         </nav>
       </div>
     </header>
+
+    <div id="infoBox">
+    <h2>Trainer Stats</h2>
+    <p>Pokémon Caught: <span id="caughtCount">0</span></p>
+    <p>Time Remaining: <span id="timeRemaining">60</span>s</p>
+  </div>
+  <div id="gameArea">
+    <div class="pokemon" id="pokemon"></div>
+    <div id="pokeballDock">
+      <div class="dock">
+        <div class="pokeball" id="pokeball"></div>
+      </div>
+    </div>
+  </div>
+
+    <script src="../scripts/my-pokemon.js"></script>
   </body>
 </html>
