--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -96,7 +96,15 @@
             <main onclick="closeAside()">
                 <div id="pokemonList" class="pokemon-list"></div>
             </main>
+
+            <div class="container-modal">
+                <div class="mask">
+                    <iframe src="my-pokemon.html" frameborder="0" width="100%" height="100%"></iframe>
+                </div>
+                
+            </div>
         </div>
+
         <script src="../scripts/pokedex.js"></script>
     </body>
 
