--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </div>
 
     <!-- Nav -->
-    <header>
+    <header style="top: 0;">
       <button class="openbtn" onclick="openCloseNav()"><i class="fa-solid fa-bars"></i></button>
       <div>
         <h1><a href="index.html">Pokédex<span
               style="font-size: 15px;">.pt</span></a></h1>
       </div>
-      <div>
+      <div class="pages">
         <nav>
           <a href="pages/pokedex.html">Pokedex</a>
           <a href="pages/my-pokemon.html">My Pokemon</a>
