--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -15,10 +15,9 @@
 
         <!-- Side Nav -->
         <div id="mySidebar" class="sidebar">
-            <a href="index.html">Home</a>
-            <a href="pages/pokedex.html">Pokedex</a>
-            <a href="pages/my-pokemon.html">My Pokemon</a>
-            <a href="pages/battle.html">Battles</a>
+            <a href="../index.html">Home</a>
+            <a href="pokedex.html">Pokedex</a>
+            <a href="battle.html">Battles</a>
         </div>
 
         <!-- Nav -->
@@ -39,7 +38,6 @@
             <div>
                 <nav>
                     <a href="pokedex.html">Pokedex</a>
-                    <a href="my-pokemon.html">My Pokemon</a>
                     <a href="battle.html">Battles</a>
                 </nav>
             </div>
