--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div id="mySidebar" class="sidebar">
       <a href="index.html">Home</a>
       <a href="pages/pokedex.html">Pokedex</a>
-      <a href="pages/my-pokemon.html">My Pokemon</a>
       <a href="pages/battle.html">Battles</a>
     </div>
 
@@ -27,7 +26,6 @@
       <div class="pages">
         <nav>
           <a href="pages/pokedex.html">Pokedex</a>
-          <a href="pages/my-pokemon.html">My Pokemon</a>
           <a href="pages/battle.html">Battles</a>
         </nav>
       </div>
@@ -77,9 +75,6 @@
       </div>
       <div class="carousel-dots"></div>
 
-      <!-- Separator -->
-      <!--hr class="separator"-->
-
       <!-- Feature Pokemon -->
       <section class="section-card" title="Feature Pokemon">
         <div style="width: 600px;">
@@ -110,9 +105,6 @@
         </div>
       </section>
 
-      <!-- Separator -->
-      <!--hr class="separator"-->
-
       <!-- Call to Battle Section -->
       <!-- Battle Section -->
       <section class="battle-section" title="Call to Battle">
@@ -126,7 +118,7 @@
             <div class="info-icon">
                 <img id="battle" src="img/battle.png" alt="Battle Icon" />
             </div>
-            <button id="battleButton"><i class="fa-solid fa-bolt"></i> Call to Battle</button>
+            <a style="text-decoration: none;" href="pages/battle.html"><button id="battleButton"><i class="fa-solid fa-bolt"></i> Call to Battle</button></a>
         </div>
         <div style="width: 600px; order: 2;">
             <!-- Card with battle image -->
@@ -139,17 +131,6 @@
             </div>
         </div>
       </section>
-      <!-- Article Pokemon Battles -->
-      <!--section class="article-container">
-        <div class="article-info">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui sequi assumenda neque eum voluptate quidem voluptates, sunt laudantium. Repellendus mollitia, illum nobis consequuntur hic sit optio culpa adipisci est reprehenderit.</p>
-          <button id="button-battles">Pokemon Battles</button>
-        </div>
-        <aside class="article-img">
-          <img src="img/pokemon-battle-carousel.jpg" alt="Pokemon Battles">
-        </aside>
-      </section>
-    </main-->
     <footer class="site-footer">
       <div class="pokeball-container">
         <img src="img/pokeball.png" alt="Pokéball" class="pokeball-footer">
@@ -158,9 +139,8 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="pokedex.html">Pokédex</a></li>
-            <li><a href="my-pokemon.html">My Pokémon</a></li>
-            <li><a href="battle.html">Battles</a></li>
+            <li><a href="pages/pokedex.html">Pokédex</a></li>
+            <li><a href="pages/battle.html">Battles</a></li>
           </ul>
         </div>
         <div class="footer-section">
