--- a/pages/my-pokemon.html
+++ b/pages/my-pokemon.html
@@ -1,3 +1,7 @@
+<!-- Este ficheiro é uma subpagina, pois ele vai para dentro da pokedex.
+     Neste ficheiro serve para apanhar o pokemon. -->
+
+     
 <!DOCTYPE html>
 <html lang="en">
   <head>
