--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -1,3 +1,7 @@
+<!-- Este ficheiro é a pokedex, onde contem a lista de pokemons e o meu perfil
+     Na lista de pokemons é possivel apanhar pokemons e adiciona-los a equipa. -->
+
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
