--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Este é o main file. Ele contem uma navegação (sidenav para mobile), um carrocel,
+     um botão para rodar o random pokemon e o footer  -->
+
+     
 <!DOCTYPE html>
 <html lang="en">
   <head>
