alooooooooottttt of stufff

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!-- Este é o main file. Ele contem uma navegação (sidenav para mobile), um carrocel,
-     um botão para rodar o random pokemon e o footer  -->
+<!-- 
+  This is the main file. It contains navigation (sidenav for mobile), a carousel,
+  a button to generate a random Pokémon, and the footer.
+  The file defines the basic structure of the page, including the header, sidebar navigation,
+  and links to other pages such as Pokédex and Battles.
+-->
 
      
 <!DOCTYPE html>
@@ -8,6 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
+    <link rel="icon" href="img/pokeball.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -45,9 +50,9 @@
             <div class="carousel-overlay">
               <h2 class="carousel-title">Pokédex</h2>
               <p class="carousel-description">
-                Discover all Pokémon from every region with detailed stats, evolutions, and types. 
-                The Pokédex is your ultimate guide to understanding the vast and diverse Pokémon universe. 
-                Whether you're a beginner or a seasoned trainer, explore and learn more about your favorite Pokémon.
+                Discover every Pokémon with detailed stats, evolutions, and types!
+                The ultimate Pokédex is your guide to the vast Pokémon universe. 
+                Perfect for beginners and seasoned trainers alike.
               </p>
             </div>
             <img src="img/pokedex-carousel.jpg" alt="Slide 1">
@@ -67,10 +72,8 @@
             <div class="carousel-overlay">
               <h2 class="carousel-title">Pokéballs</h2>
               <p class="carousel-description">
-                Equip yourself with the best Pokéballs to catch Pokémon in any situation. 
-                From basic Pokéballs to specialized types like Ultra Balls and Master Balls, 
-                ensure your team is always ready for new encounters. 
-                Learn the secrets of catching rare and legendary Pokémon.
+                Catch them all with a Pokéball built for all adventures—reliable and ready for any challenge.
+                Be ready for every encounter and catch even the rarest Pokémon!
               </p>
             </div>
             <img src="img/pokeballs-carousel.jpg" alt="Slide 3">
