--- a/pages/my-pokemon.html
+++ b/pages/my-pokemon.html
@@ -1,5 +1,8 @@
-<!-- Este ficheiro é uma subpagina, pois ele vai para dentro da pokedex.
-     Neste ficheiro serve para apanhar o pokemon. -->
+<!-- 
+  This HTML file represents the Catch Pokémon page. It is a subpage within the Pokédex.
+  The page is designed for catching Pokémon. It includes a game area where Pokémon appear,
+  a Pokéball dock for catching them.
+-->
 
      
 <!DOCTYPE html>
