--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -1,5 +1,9 @@
-<!-- Este ficheiro é a pokedex, onde contem a lista de pokemons e o meu perfil
-     Na lista de pokemons é possivel apanhar pokemons e adiciona-los a equipa. -->
+<!-- 
+  This HTML file represents the Pokédex page. It includes a search bar for finding specific Pokémon,
+  a list or grid layout to display Pokémon details, and interactive elements to view more information
+  about each Pokémon. The page allows users to explore and learn about different Pokémon, their stats and
+  types.
+-->
 
 
 <!DOCTYPE html>
@@ -8,6 +12,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokédex</title>
+        <link rel="icon" href="../img/pokeball.png">
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             rel="stylesheet">
