--- a/index.html
+++ b/index.html
@@ -130,11 +130,13 @@
         <div style="width: 600px; order: 2;">
             <!-- Card with battle image -->
             <div class="card battle-card">
+              <div class="battle-card-image-wrapper">
                 <img src="img/pokemon-battle-carousel.jpg" alt="Epic Pokémon Battle" class="battle-card-image" />
-                <div class="battle-card-overlay">
-                    <h3 class="battle-card-title">Battle Time!</h3>
-                    <p class="battle-card-text">Experience the thrill of battles and unleash your Pokémon's true potential.</p>
-                </div>
+              </div>
+              <div class="battle-card-overlay">
+                  <h3 class="battle-card-title">Battle Time!</h3>
+                  <p class="battle-card-text">Experience the thrill of battles and unleash your Pokémon's true potential.</p>
+              </div>
             </div>
         </div>
       </section>
