--- a/pages/battle.html
+++ b/pages/battle.html
@@ -47,7 +47,7 @@
             <div id="turnPopup" class="turn-popup"></div>
 
             <!-- Opponent's cards -->
-            <section class="opponent-cards">
+            <section class="opponent-cards noselect">
                 <div class="card" id="opponent-card-1" data-name="" style="--rotation: -16deg; --offsetX: 160px;">Opponent Card 1</div>
                 <div class="card" id="opponent-card-2" data-name="" style="--rotation: -8deg; --offsetX: 80px;">Opponent Card 2</div>
                 <div class="card" id="opponent-card-3" data-name="" style="--rotation: 0deg; --offsetX: 0px;">Opponent Card 3</div>
@@ -56,7 +56,7 @@
             </section>
         
             <!-- Battlefield -->
-            <section class="battlefield">
+            <section class="battlefield noselect">
                 <div class="grid-cell" id="cell-1"></div>
                 <div class="grid-cell" id="cell-2"></div>
                 <div class="grid-cell" id="cell-3"></div>
@@ -72,7 +72,7 @@
             </section>
         
             <!-- Player's cards -->
-            <section class="player-cards">
+            <section class="player-cards noselect">
                 <div class="card" id="player-card-1" data-name="" style="--rotation: -16deg; --offsetX: -160px;">Player Card 1</div>
                 <div class="card" id="player-card-2" data-name="" style="--rotation: -8deg; --offsetX: -80px;">Player Card 2</div>
                 <div class="card" id="player-card-3" data-name=""style="--rotation: 0deg; --offsetX: 0px;">Player Card 3</div>
