--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -37,7 +37,7 @@
                 <h1><a href="../index.html">Pokédex<span
                             style="font-size: 15px;">.pt</span></a></h1>
             </div>
-            <div>
+            <div style="display: block !important;">
                 <input
                     type="text"
                     id="searchBar"
