tutorial and buttons

--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -67,11 +67,19 @@
                     <p class="user-stats">Victories: <span
                             id="victories">0</span> | Defeats: <span
                             id="defeats">0</span></p>
-                    <button class="edit-button" onclick="openEditPopup()">Edit
-                        Profile</button>
+                    <button class="restart-button-game" onclick="openEditPopup()">Edit
+                        Profile
+                    </button>
                 </div>
                 <h2>Your Battle Team</h2>
                 <ul id="battleTeam"></ul>
+                <div class="button-container-for-center">
+                    <a href="battle.html" style="text-decoration: none;">
+                        <button id="goToBattleBtn" class="restart-button-game team-full escape">
+                            Go to Battle!
+                        </button>
+                    </a>
+                </div>
             </aside>
 
             <!-- Popup Modal -->
