--- a/pages/battle.html
+++ b/pages/battle.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <!-- Help Button -->
-                <button id="helpButton" class="floating-help-btn" onclick="showTutorial()">
+                <button id="helpButton" class="floating-help-btn" onclick="showTutorial(true)">
                     ❓
                 </button>
             </section>
