--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -100,13 +100,13 @@
                         <input type="file" id="userAvatar" accept="image/*"
                             onchange="previewImage()" hidden />
 
-                        <label for="userName">Name:</label>
+                        <label for="userName">Name* :</label>
                         <input type="text" id="userName" value="Ash Ketchum" />
 
-                        <label for="userEmail">Email:</label>
+                        <label for="userEmail">Email* :</label>
                         <input type="email" id="userEmail" value="ash.ketchum@email.com" />
 
-                        <label for="userEmail">Pokemon Favorite:</label>
+                        <label for="userEmail">Pokemon Favorite* :</label>
                         <input type="text" id="userPokemon" value="Bulbasaur" />
 
                         <h4 id="error"></h4>
